# Game-of-Life

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy-pages.yml
src/: lib.rs  universe.rs
tests/: web.rs
web/: index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  uno.config.ts  vite.config.ts
web/src/: index.ts  payload.ts  worker.ts
