[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
itertools = "0.12.0"
js-sys = "0.3.65"
wasm-bindgen = "0.2.89"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
